2009-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3.c: remove debugging info

2009-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3.c: only including throttling code if the precompiler
	  symbols are present

2009-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: fix TAPEEND handling in seek_file
	* installcheck/Amanda_Device.pl: test it

2009-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/Makefile.am: compile ndmp-src without warnings again - the
	  source generated with rpcgen contains constructs that cause
	  warnings for which earlier gcc's have no -Wno-xxx option
	* configure.in: revert disabled warnings

2009-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/NDMP.swg: correct argument size to SWIG_AsCharPtrAndSize

2009-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3.c device-src/s3.h: add max send and receive speeds
	* device-src/s3-device.c: add PROPERTY_MAX_SEND_SPEED and
	  PROPERTY_MAX_RECV_SPEED
	* man/xml-source/amanda-devices.7.xml: document

2009-12-21  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/Makefile.am configure.in: conditionalize warnings which
	  are not present on all gcc version
	* ndmp-src/amndma_tape_simulator.c ndmp-src/ndma_tape_simulator.c
	  ndmp-src/ndmjob_main_util.c: fix warnings
	* ndmp-src/ndmp9.h ndmp-src/ndmp9.x ndmp-src/ndmp9_xdr.c: unsigned
	  long long constant should end in 'ull'

2009-12-21  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_NDMP.pl: add auth parameter here too

2009-12-21  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndmpconnobj.c ndmp-src/ndmpconnobj.h: add an auth
	  parameter with four options
	* perl/Amanda/NDMP.pod perl/Amanda/NDMP.swg: SWIG it
	* device-src/ndmp-device.c: add NDMP_AUTH property
	* man/xml-source/amanda-devices.7.xml: doc it
	* perl/Amanda/Changer/ndmp.pm: add NDMP-AUTH property
	* man/xml-source/amanda-changers.7.xml: doc it
