@@ -1,3 +1,6 @@
+2009-12-23  Dustin J. Mitchell <dustin@zmanda.com>
+	* installcheck/Amanda_NDMP.pl: work around perl-5.6's bad BigInt
+
 2009-12-22  Dustin J. Mitchell <dustin@zmanda.com>
 	* device-src/s3.c: remove debugging info
 
